maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:43: error: not found: value cassesMarquees
  cassesMarquees += 1
  ^JediEscaper:47: error: not found: value ecritIndicaton
  ecritIndicaton()
  ^